# ABC

./: Copy_2_of_ur10.slx  Copy_of_ur10.slxc  gen6.mat  universalUR10.urdf  ur10.slx  ur10.slxc
ws_robopepp/src/robopepp_bridge/: package.xml  setup.cfg  setup.py
ws_robopepp/src/robopepp_bridge/config/: extrinsics.yaml  intrinsics.yaml  robopepp_ur3.yaml
ws_robopepp/src/robopepp_bridge/launch/: robopepp_bringup.launch.py
ws_robopepp/src/robopepp_bridge/robopepp_bridge/: extrinsic_calib_node.py  robopepp_node.py  rtde_left_node.py  rtde_right_node.py
ws_robopepp/src/robopepp_bridge/urdf/: ur3_left_with_2f85.xacro  ur3_right_with_2f85.xacro
